--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
-<!DOCTYPE html><html lang="en-US" class="root no-js"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="build_id" content="local-build"><meta name="build_date" content="1427422274359"><meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"><title>GMD Readme</title><link rel="apple-touch-icon-precomposed" href="apple-touch-icon-152x152-precomposed.png"><link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,700,700italic" type="text/css"><link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro" type="text/css"><link rel="stylesheet" href="css/gmd-readme.min.css" type="text/css"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<!DOCTYPE html><html lang="en-US" class="root no-js"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="build_id" content="local-build"><meta name="build_date" content="1427937093048"><meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"><title>gmd-readme</title><link rel="apple-touch-icon-precomposed" href="apple-touch-icon-152x152-precomposed.png"><link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic,700,700italic" type="text/css"><link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro" type="text/css"><link rel="stylesheet" href="css/gmd-readme.min.css" type="text/css"><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-61248522-1', 'auto');
 ga('send', 'pageview');
 </script></head><body class="body markdown-body"><a href="https://github.com/renancouto/gmd-readme" title="View on Github" class="fab"><svg style="width:24px;height:24px" viewBox="0 0 24 24"><path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2z"/></svg>
-</a><div class="main-wrapper"><article class="card"><header class="card__header"><h1 class="card__heading">GMD Readme</h1></header><section class="card__content"><blockquote>Google's Material Design Theme for your README.md files</blockquote><h2>Usage</h2><ul><li>clone this repo: <code>git clone git@github.com:renancouto/gmd-readme.git</code></li><li>install its dependencies: <code>npm install</code></li><li>modify the contents on the <code>src/html/index.jade</code> file to suit your needs</li><li>build it: <code>npm start</code></li></ul><h2>Thanks to</h2><ul><li><a href="https://dribbble.com/kyleledbetter">Kyle Ledbetter</a> for the <a href="https://dribbble.com/shots/1910686-Material-Design-Wallpaper-Free-Sketch-Template">wallpapers</a></li></ul><h2>Licence</h2><p>MIT</p></section></article></div><script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script></body></html>
+</a><div class="main-wrapper"><article class="card"><h1 id="gmd-readme">gmd-readme</h1>
+<blockquote>
+<p>Google&#39;s Material Design Theme for your README.md files</p>
+</blockquote>
+<h2 id="usage">Usage</h2>
+<ul>
+<li>clone this repo: <code>git clone git@github.com:renancouto/gmd-readme.git</code></li>
+<li>install its dependencies: <code>npm install</code></li>
+<li>modify the contents on the <code>README.md</code> file to suit your needs</li>
+<li>build it: <code>npm start</code></li>
+</ul>
+<h2 id="thanks-to">Thanks to</h2>
+<ul>
+<li><a href="https://dribbble.com/kyleledbetter">Kyle Ledbetter</a> for the <a href="https://dribbble.com/shots/1910686-Material-Design-Wallpaper-Free-Sketch-Template">wallpapers</a></li>
+</ul>
+<h2 id="licence">Licence</h2>
+<p>MIT</p>
+</article></div><script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script></body></html>
